# voronoi

./: CMakeLists.txt  main.cpp  my_qlabel.cpp  my_qlabel.h  starburst.cpp  starburst.h  starburst.qrc  starburst.ui
voronoi_core/: CMakeLists.txt  apollonius_dia.cpp  apollonius_dia.h  bf_apollonius.cpp  bf_apollonius.h  bf_relax.cpp  bf_relax.h  bf_voronoi.cpp  bf_voronoi.h  power_dia.cpp  power_dia.h  voronoi_dia.cpp  voronoi_dia.h  wpoint.h
