CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT("voronoi")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
FIND_PACKAGE(CGAL REQUIRED)
INCLUDE_DIRECTORIES(CGAL_INCLUDE_DIR)
SET(CORELIBS ${CGAL_LIBRARIES} ${BOOST_THREAD_LIBRARIES} ${GMP_LIBRARIES})

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
SET(CORELIBS ${CORELIBS} ${QT_LIBRARIES})

FIND_PACKAGE(OpenCV REQUIRED)
SET(CORELIBS ${CORELIBS} ${OpenCV_LIBS})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

SET(voronoi_SOURCES 
    main.cpp 
    starburst.cpp 
    my_qlabel.cpp)
SET(voronoi_HEADERS my_qlabel.h starburst.h)
SET(voronoi_FORMS starburst.ui)
SET(voronoi_RESOURCES starburst.qrc)

QT4_WRAP_UI(voronoi_FORMS_HEADERS ${voronoi_FORMS})
QT4_WRAP_CPP(voronoi_HEADERS_MOC ${voronoi_HEADERS})
QT4_ADD_RESOURCES(voronoi_RESOURCES_RCC ${voronoi_RESOURCES})

ADD_SUBDIRECTORY(voronoi_core)

ADD_EXECUTABLE(voronoi 
  ${voronoi_SOURCES} 
  ${voronoi_HEADERS_MOC}
  ${voronoi_FORMS_HEADERS}
  ${voronoi_RESOURCES_RCC})
TARGET_LINK_LIBRARIES(voronoi ${CORELIBS} voronoiCore)
